---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/line_ranges_unwrapping.py
---
## Input

```python
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.
alist   =   [
        1, 2
]

adict   =   {
    "key"  :  "value"
}

func_call  (
    arg  = value
)
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,4 +1,3 @@
-# flags: --line-ranges=5-5 --line-ranges=9-9 --line-ranges=13-13
 # NOTE: If you need to modify this file, pay special attention to the --line-ranges=
 # flag above as it's formatting specifically these lines.
 alist = [1, 2]
```

## Ruff Output

```python
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.
alist = [1, 2]

adict = {"key": "value"}

func_call(arg=value)
```

## Black Output

```python
# flags: --line-ranges=5-5 --line-ranges=9-9 --line-ranges=13-13
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.
alist = [1, 2]

adict = {"key": "value"}

func_call(arg=value)
```


